[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/pmove.gd" type="Script" id=1]
[ext_resource path="res://scripts/paudio.gd" type="Script" id=2]
[ext_resource path="res://scripts/view.gd" type="Script" id=3]

[sub_resource type="CylinderShape" id=1]
height = 3.6

[node name="Player_Simple" type="KinematicBody"]
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="Head"]

[node name="Audio" type="Node" parent="."]
script = ExtResource( 2 )

[node name="FeetFX" type="AudioStreamPlayer" parent="Audio"]

[node name="JumpFX" type="AudioStreamPlayer" parent="Audio"]

[node name="EnvFX" type="AudioStreamPlayer" parent="Audio"]
